--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,5 +5,9 @@ $gray: rgba(0, 0, 0, 0.05);
 $gray-600: #fafafa;
 $white: #ffffff;
 
-$font-wight-normal: 500;
-$font-wight-bold: 700;
+$font-weight-normal: 400;
+$font-weight-bold: 700;
+
+$font-size-base: 16px;
+$font-size-md: 14px;
+$font-size-sm: 12px;
