--- a/src/app/taskboard/task-list/task-list.component.scss
+++ b/src/app/taskboard/task-list/task-list.component.scss
@@ -1,16 +1,17 @@
 @import '../../../sass/variables';
 
-.task-list {
-  background-color: $gray-600;
-  padding: 1rem 0.5rem;
-  .task-list-container {
-    background-color: $gray;
-    padding: 0.5rem;
-    border-radius: 2px;
-    .task-header {
-      font-weight: $font-wight-bold;
-    }
-    .task-content {
-    }
-  }
+
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  // border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  // border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
