--- a/src/app/taskboard/taskboard/taskboard.component.scss
+++ b/src/app/taskboard/taskboard/taskboard.component.scss
@@ -4,4 +4,80 @@
   padding: 10px;
   display: grid;
   grid-template-columns: calc(100%/5) calc(100%/5) calc(100%/5) calc(100%/5) calc(100%/5);
+  .task-list {
+    background-color: $gray-600;
+    padding: 1rem 0.5rem;
+    .task-list-container {
+      background-color: $gray;
+      padding: 0.5rem;
+      border-radius: 2px;
+      .drop-list {
+        max-height: calc(100vh - 150px);
+        overflow-y: auto;
+        padding-bottom: 10px
+      }
+      .list-box {
+        box-sizing: border-box;
+        cursor: move;
+        font-size: 14px;
+        border-radius: 2px;
+        .title {
+          font-weight: $font-weight-normal;
+          text-transform: capitalize;
+        }
+        .description {
+          font-weight: $font-weight-normal;
+          font-size: $font-size-sm;
+        }
+      }
+      .task-header {
+        font-weight: $font-weight-bold;
+        text-transform: capitalize;
+      }
+      // .task-content {
+      //   max-height: 100vh;
+      //   overflow-y: auto;
+      // }
+    }
+  }
+}
+
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+              0 8px 10px 1px rgba(0, 0, 0, 0.14),
+              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+  border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
