--- a/src/app/widget/card/card.component.scss
+++ b/src/app/widget/card/card.component.scss
@@ -8,11 +8,27 @@
     padding: 1rem;
     margin-bottom: .5rem;
     box-shadow: 0 1px 2px rgba(0,0,0,.1);
+    border-radius: 4px;
     .card-title {
       font-size: 14px;
     }
     .card-body {
       padding: 0;
       font-size: 12px;
+    }
+    mat-icon {
+      position: absolute;
+      right: 4px;
+      top: -4px;
+    }
+    ::ng-deep .in-active {
+      mat-icon {
+        color: red;
+      }
+    }
+    ::ng-deep .active {
+      mat-icon {
+        color: green;
+      }
     }
 }
