--- a/src/app/widget/card/card.component.html
+++ b/src/app/widget/card/card.component.html
@@ -1,5 +1,5 @@
-<div class="card" [ngClass]="status">
-  <mat-icon *ngIf="flag">bookmark</mat-icon>
+<div class="card status">
+  <mat-icon *ngIf="flag" [ngStyle]="{'color': color}">bookmark</mat-icon>
   <div class="card-title">{{title}}</div>
   <div class="card-body">{{description}}</div>
 </div>
