added task history component

--- a/src/app/taskboard/taskboard/taskboard.component.html
+++ b/src/app/taskboard/taskboard/taskboard.component.html
@@ -7,8 +7,9 @@
         </div>
         <div cdkDropList #backlog1List="cdkDropList" [cdkDropListData]="backlog1" [cdkDropListConnectedTo]="[todoList, inProcessList, backlog2List, completedList]"
           class="drop-list" (cdkDropListDropped)="drop($event)">
-          <div class="list-box" *ngFor="let item of backlog1" cdkDrag>
-            <app-card [title]="item.title" [flag]="item.flag" [color]="item.color" [description]="item.description"></app-card>
+          <div class="list-box" id="{{item.id}}" *ngFor="let item of backlog1" cdkDrag>
+            <app-card (iconClick)="gotoHistory(item.id)" [title]="item.title" [flag]="item.flag" [color]="item.color"
+              [description]="item.description"></app-card>
           </div>
         </div>
       </div>
@@ -22,8 +23,9 @@
         </div>
         <div cdkDropList #todoList="cdkDropList" [cdkDropListData]="todo" [cdkDropListConnectedTo]="[backlog1List, inProcessList, backlog2List, completedList]"
           class="drop-list" (cdkDropListDropped)="drop($event)">
-          <div class="list-box" *ngFor="let item of todo" cdkDrag>
-            <app-card [title]="item.title" [flag]="item.flag" [color]="item.color" [description]="item.description"></app-card>
+          <div class="list-box" id="{{item.id}}" *ngFor="let item of todo" cdkDrag>
+            <app-card (iconClick)="gotoHistory(item.id)" [title]="item.title" [flag]="item.flag" [color]="item.color"
+              [description]="item.description"></app-card>
           </div>
         </div>
       </div>
@@ -37,8 +39,9 @@
         </div>
         <div cdkDropList #inProcessList="cdkDropList" [cdkDropListData]="inProcess" [cdkDropListConnectedTo]="[todoList, backlog1List, backlog2List, completedList]"
           class="drop-list" (cdkDropListDropped)="drop($event)">
-          <div class="list-box" *ngFor="let item of inProcess" cdkDrag>
-            <app-card [title]="item.title" [flag]="item.flag" [color]="item.color" [description]="item.description"></app-card>
+          <div class="list-box" id="{{item.id}}" *ngFor="let item of inProcess" cdkDrag>
+            <app-card (iconClick)="gotoHistory(item.id)" [title]="item.title" [flag]="item.flag" [color]="item.color"
+              [description]="item.description"></app-card>
           </div>
         </div>
       </div>
@@ -53,8 +56,9 @@
         </div>
         <div cdkDropList #backlog2List="cdkDropList" [cdkDropListData]="backlog2" [cdkDropListConnectedTo]="[todoList, backlog1List, inProcessList, completedList]"
           class="drop-list" (cdkDropListDropped)="drop($event)">
-          <div class="list-box" *ngFor="let item of backlog2" cdkDrag>
-            <app-card [title]="item.title" [flag]="item.flag" [color]="item.color" [description]="item.description"></app-card>
+          <div class="list-box" id="{{item.id}}" *ngFor="let item of backlog2" cdkDrag>
+            <app-card (iconClick)="gotoHistory(item.id)" [title]="item.title" [flag]="item.flag" [color]="item.color"
+              [description]="item.description"></app-card>
           </div>
         </div>
       </div>
@@ -68,8 +72,9 @@
         </div>
         <div cdkDropList #completedList="cdkDropList" [cdkDropListData]="completed" [cdkDropListConnectedTo]="[todoList, backlog1List, inProcessList, backlog2List]"
           class="drop-list" (cdkDropListDropped)="drop($event)">
-          <div class="list-box" *ngFor="let item of completed" cdkDrag>
-            <app-card [title]="item.title" [flag]="item.flag" [color]="item.color" [description]="item.description"></app-card>
+          <div class="list-box" id="{{item.id}}" *ngFor="let item of completed" cdkDrag>
+            <app-card (iconClick)="gotoHistory(item.id)" [title]="item.title" [flag]="item.flag" [color]="item.color"
+              [description]="item.description"></app-card>
           </div>
         </div>
       </div>
